// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render AddTeam correctly when there are no teams 1`] = `
<div
  className="admin-module"
>
  <div
    className="admin-section__header"
  >
    Add New Team
  </div>
  <div
    className="admin-section"
  >
    <div
      className="add-team"
    >
      <form
        className="add-team__input-form"
        id="add-team-form"
        onSubmit={[Function]}
      >
        <input
          className="add-team__input add-team__name"
          contentEditable={true}
          placeholder="Team name"
        />
        <input
          className="add-team__input add-team__admin"
          contentEditable={true}
          placeholder="Team admin (Google email)"
        />
        <button
          className="btn btn--secondary btn--shine btn--add"
          form="add-team-form"
          type="submit"
        >
          +
        </button>
      </form>
    </div>
  </div>
  <div
    className="admin-expandable-area-container expandable-team-area"
  >
    <div
      className="admin-expandable-area__notification"
    >
      Deleting a team will remove their snippets!
    </div>
    <div
      className="admin-expandable-area"
    >
      <div
        className="list-item__message"
      >
        There are no teams for 
        Project
        . Add the first one!
      </div>
    </div>
  </div>
  <div
    className="admin-section__footer"
    onClick={[Function]}
  >
    View teams
    <div
      className="chevron-logo-container team-chevron"
    >
      <svg
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`should render AddTeam correctly when there are teams 1`] = `
<div
  className="admin-module"
>
  <div
    className="admin-section__header"
  >
    Add New Team
  </div>
  <div
    className="admin-section"
  >
    <div
      className="add-team"
    >
      <form
        className="add-team__input-form"
        id="add-team-form"
        onSubmit={[Function]}
      >
        <input
          className="add-team__input add-team__name"
          contentEditable={true}
          placeholder="Team name"
        />
        <input
          className="add-team__input add-team__admin"
          contentEditable={true}
          placeholder="Team admin (Google email)"
        />
        <button
          className="btn btn--secondary btn--shine btn--add"
          form="add-team-form"
          type="submit"
        >
          +
        </button>
      </form>
    </div>
  </div>
  <div
    className="admin-expandable-area-container expandable-team-area"
  >
    <div
      className="admin-expandable-area__notification"
    >
      Deleting a team will remove their snippets!
    </div>
    <div
      className="admin-expandable-area"
    >
      <div
        className="admin-area__item"
        key="team"
      >
        <div
          className="admin-area__item-text"
        >
          Team
        </div>
        <button
          className="admin-area__item-remove"
          onClick={[Function]}
        >
          ✕
        </button>
      </div>
      <div
        className="admin-area__item"
        key="team2"
      >
        <div
          className="admin-area__item-text"
        >
          Team2
        </div>
        <button
          className="admin-area__item-remove"
          onClick={[Function]}
        >
          ✕
        </button>
      </div>
    </div>
  </div>
  <div
    className="admin-section__footer"
    onClick={[Function]}
  >
    View teams
    <div
      className="chevron-logo-container team-chevron"
    >
      <svg
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        />
      </svg>
    </div>
  </div>
</div>
`;
